[workspace]

[package]
name = "procon"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "procon"

[dependencies]
__procon_segtree = { package = "procon_segtree", path = "./procon_segtree" }
__procon_math_traits = { package = "procon_math_traits", path = "./procon_math_traits" }
__procon_unionfind = { package = "procon_unionfind", path = "./procon_unionfind" }
__procon_multiset = { package = "procon_multiset", path = "./procon_multiset" }
