[workspace]
members = [
    "procon_complex",
    "procon_input",
    "procon_itertools",
    "procon_math",
    "procon_math_traits",
    "procon_modint",
    "procon_multiset",
    "procon_rollinghash",
    "procon_segtree",
    "procon_unionfind",
]

[package]
name = "procon"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "procon"

[dependencies]
__procon_segtree = { package = "procon_segtree", path = "./procon_segtree" }
__procon_math_traits = { package = "procon_math_traits", path = "./procon_math_traits" }
__procon_unionfind = { package = "procon_unionfind", path = "./procon_unionfind" }
__procon_multiset = { package = "procon_multiset", path = "./procon_multiset" }
__procon_math = { package = "procon_math", path = "./procon_math" }
__procon_complex = { package = "procon_complex", path = "./procon_complex" }
__procon_modint = { package = "procon_modint", path = "./procon_modint" }
__procon_input = { package = "procon_input", path = "./procon_input" }
__procon_itertools = { package = "procon_itertools", path = "./procon_itertools" }
__procon_rollinghash = { package = "procon_rollinghash", path = "./procon_rollinghash" }
