[package]
name = "procon_shortest_path"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
__procon_graph = { package = "procon_graph", path = "../procon_graph" }
__procon_math_traits = { package = "procon_math_traits", path = "../procon_math_traits" }