[package]
name = "procon_suffixarray"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
__procon_sparse_table = { package = "procon_sparse_table", path = "../procon_sparse_table" }
